--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -24,6 +24,8 @@
 
     <button id="scramble-button">New Scramble</button>
 
+    <button id="solve-button" class="btn btn-primary">Solve with AI</button>
+
 </div>
 
 <form id="customization">
