--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -24,7 +24,7 @@
 
     <button id="scramble-button">New Scramble</button>
 
-    <button id="solve-button" class="btn btn-primary">Solve with AI</button>
+    <button id="solve-with-ai-button" class="btn btn-primary">Solve with AI</button>
 
 </div>
 
