--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -26,6 +26,23 @@
 
     <button id="solve-with-ai-button" class="btn btn-primary">Solve with AI</button>
 
+    <div id="ai-solution-container" hidden>
+        <div id="move-navigation-container">
+            <p id="move-sequence-text"><!--inject move sequence into here--></p>
+            <div id="move-navigation-button-container">
+                <button id="play previous move">
+                    Go back one move
+                </button>
+                <button id="play next move">
+                    Play next move
+                </button>
+            </div>
+        </div>
+        <button id="full-visual-solution">
+            Play full step-by-step solution
+        </button>
+    </div>
+
 </div>
 
 <form id="customization">
