--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -30,10 +30,10 @@
         <div id="move-navigation-container">
             <p id="move-sequence-text"><!--inject move sequence into here--></p>
             <div id="move-navigation-button-container">
-                <button id="play previous move">
+                <button id="play-previous-move">
                     Go back one move
                 </button>
-                <button id="play next move">
+                <button id="play-next-move">
                     Play next move
                 </button>
             </div>
