--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -36,9 +36,13 @@
 
     <div id="puzzle-controls">
         <div id="puzzle-control-buttons">
+        <button id="undo-button">Undo Move</button>
+
         <button id="scramble-button">New Scramble</button>
 
-        <button id="solve-with-ai-button" class="btn btn-primary">Solve with AI</button>
+        <button id="solve-with-ai-button">Solve with AI</button>
+
+        <button id="redo-button">Redo Move</button>
         </div>
         <div id="ai-solution-container" hidden>
             <div id="move-navigation-container">
