--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -81,6 +81,9 @@ Let us denote this initial random permutation <b>[a_1, a_2, ..., a_n]</b>.
 
         <button id="redo-button">Redo Move</button>
         </div>
+        <div>
+            <p>Note: the AI might take a while (1 minute or more) to find the optimal solution.</p>
+        </div>
         <div id="ai-solution-container" hidden>
             <div id="move-navigation-container">
                 <p id="move-sequence-text"><!--inject move sequence into here--></p>
