--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -82,7 +82,7 @@ Let us denote this initial random permutation <b>[a_1, a_2, ..., a_n]</b>.
         <button id="redo-button">Redo Move</button>
         </div>
         <div>
-            <p>Note: the AI might take a while (1 minute or more) to find the optimal solution.</p>
+            <p>Note: the AI might take a while (1 minute or more) to find the optimal solution. Sometimes it could give a wrong answer./p>
         </div>
         <div id="ai-solution-container" hidden>
             <div id="move-navigation-container">
