functionality done i guess

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <h1>Puzzle Game Collection</h1>
-    <p>Put your problem-solving skills to the test playing around with these puzzles!</p>
+    <p>Put your problem-solving skills to the test by playing around with these puzzles!</p>
 </header>
 <body>
     <div id="puzzle-catalogue">
