--- a/puzzle2aliceandbob.html
+++ b/puzzle2aliceandbob.html
@@ -10,6 +10,7 @@
 
 <h2 id="page-title">Hypercube Game</h2>
 
+<button id="back-button">Back to Home</button>
 <button id="show-instructions">Hide Instructions</button>
 
 <div id="puzzle-introduction">
