--- a/puzzle1sorting.html
+++ b/puzzle1sorting.html
@@ -10,6 +10,7 @@
 
 <h2 id="page-title">1D Rubik's Cube</h2>
 
+<button id="back-button">Back to Home</button>
 <button id="show-instructions">Hide Instructions</button>
 
 <div id="puzzle-introduction">
