--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="puzzle1sorting.html"><button>Play</button></a>
         </div>
         <div class="puzzle-entry">
-            <h2>Puzzle 2: Hybercube race</h2>
+            <h2>Puzzle 2: Hybercube race (based on 2025 Putnam Problem A3)</h2>
             <a href="puzzle2aliceandbob.html"><button>Play</button></a>
         </div>
         </div>
