--- a/puzzle2aliceandbob.html
+++ b/puzzle2aliceandbob.html
@@ -46,7 +46,7 @@ You can choose to either go first or second.
 
 <div id="number-moves-container">
 <h4>Number of moves so far: 
-<div id="number-moves">0</div>
+<div id="number-moves"><h2>0</h2></div>
 </h4>
 </div>
 
@@ -58,8 +58,8 @@ You can choose to either go first or second.
 </div>
 
 <div id="current-string-container">
-    <h2>Current String: </h2>
-    <div id="string-display"><h3><!-- JS injects into this DIV as well--></h3></div>
+    <h3>Current String: </h3>
+    <div id="string-display"><h2><!-- JS injects into this DIV as well--></h2></div>
     <div id="no-legal-moves-message" hidden>No more Legal Moves Remain!</div>
     <div id="winner-message" hidden></div>
     <div id="illegal-warning" hidden>Illegal Move (already has been reached)</div>
