--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header>
-    <h1>Puzzle Game Collection</h1>
-    <p>Put your problem-solving skills to the test by playing around with these puzzles!</p>
+    <h1 id="page-title">Puzzle Game Collection</h1>
+    <p id="page-description">Put your problem-solving skills to the test by playing around with these puzzles!</p>
 </header>
 <body>
     <div id="puzzle-catalogue">
-        <h2>Puzzle Catalogue</h2>
+        <h2 id="puzzle-catalogue-title">Puzzle Catalogue</h2>
         <div id="puzzle-catalogue-list">
         <div class="puzzle-entry">
-            <h2>Puzzle 1: Cyclic Sorting (a.k.a. 1D Rubik's cube)</h2>
+            <h3 class="puzzle-entry-title">Puzzle 1: Cyclic Sorting (a.k.a. 1D Rubik's cube)</h3>
             <a href="puzzle1sorting.html"><button>Play</button></a>
         </div>
         <div class="puzzle-entry">
-            <h2>Puzzle 2: Hybercube race (based on 2025 Putnam Problem A3)</h2>
+            <h3 class="puzzle-entry-title">Puzzle 2: Hybercube race (based on 2025 Putnam Problem A3)</h3>
             <a href="puzzle2aliceandbob.html"><button>Play</button></a>
         </div>
         </div>
